--- a/IdentityProject/IdentityProject.csproj
+++ b/IdentityProject/IdentityProject.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -9,6 +9,11 @@
     <Content Remove="ViewComponents\**" />
     <EmbeddedResource Remove="ViewComponents\**" />
     <None Remove="ViewComponents\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="Migrations\20210407180330_IdentityMigration.cs" />
+    <Compile Remove="Migrations\20210407180330_IdentityMigration.Designer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\CMS\" />
